<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvcrearcuenta"
        app:layout_constraintBottom_toTopOf="@+id/edtregdni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <EditText
        android:id="@+id/edtregdni"
        android:layout_width="320dp"
        android:layout_height="68dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/regdni"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edtregnombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtregnombre"
        android:layout_width="320dp"
        android:layout_height="68dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/regnombre"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edtregpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnregcuent"
        android:layout_width="318dp"
        android:layout_height="77dp"
        android:text="@string/btnregcuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <EditText
        android:id="@+id/edtregpassword"
        android:layout_width="320dp"
        android:layout_height="68dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/edtpassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/edtregpassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtregpassword2"
        android:layout_width="320dp"
        android:layout_height="68dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/edtvalidpss"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnregcuent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>